--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -78,3 +77,5 @@ fabric.properties
 .idea/httpRequests
 
 /.gradle/
+
+\.idea/
